--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ nav .active a, nav a:hover{
     background-color: blue
 }
 .banner2{
-    background-color: darkorange;
+    background-color: rgb(16, 7, 142);
 }
 .banner3{
     background-color: dodgerblue;
@@ -103,4 +103,60 @@ nav .active a, nav a:hover{
     padding: 5px;
     color: aliceblue;
     text-decoration: none;
+}
+#geral{
+    display: flex;
+    justify-content: center;
+}
+.widget_title{
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.widget_title_text{
+    font-size: 21px;
+    font-weight: bold;
+}
+.widget_title_bar{
+    width: 50px;
+    height: 5px;
+    background-color: #36a9e1;
+    margin-top: 10px;
+}
+#rodape{
+    background-color: #1e1e1e;
+    display: flex;
+    justify-content: center;
+    height: 40px;
+    line-height: 40px;
+    color: aliceblue;
+    font-size: 12px;
+    margin-top: 30px;
+}
+@media (max-width: 880px){
+ 
+    .banner_headline h1 {
+        font-size: 55px;
+        padding: auto;
+    }
+    .banner_headeline h2{
+        font-size: 17px;
+    }
+    .menu {
+        display: flex;
+        align-items: center;  
+        padding: 0;            
+        margin: 0;              
+        text-align: center;
+        font-size: 10px;  
+    }
+    .logo{
+        display: none;
+    }
+    .banner_options{
+        height: auto;
+        flex-direction: column;
+    }
+    #geral{
+        padding: 20px;
+    }
 }
